# Radar

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: .github.yml
docs/: СПО_Радар.drawio
src/: ArchiveTrackModel.cpp  ArchiveTrackModel.h  ChartViewController.h  FakeStorageAccessor.cpp  FakeStorageAccessor.h  Object.h  RealTimeObjectModel.cpp  RealTimeObjectModel.h  main.cpp  qml.qrc
src/qml/: ArchiveView.qml  DatePikerField.qml  RadarView.qml  main.qml
